--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -32,6 +32,16 @@
 
 
     </main>
+    <footer class="rodape"> 
+        Desenvolvido por GERSON POMPEU CAVALCANTE
+        <p class="rodape_contato">
+            
+            <img src="../img/whatsapp.svg">
+            (88) 9.9214-2249  
+            <img src="../img/email.svg">
+             gersonpc10@hotmail.com
+        </p>
+    </footer>
     
 </body>
 </html>
