--- a/cursos/ONE/one.html
+++ b/cursos/ONE/one.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <title>Cursos ONE</title>
     <link rel="stylesheet" href="/cursos/stylecertificados.css">
 </head>
 <body>
@@ -59,7 +60,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Empreendedorismo: da ideia ao plano de negócios</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Pilares do Empreendedorismo, Ideias e Oportunidades, Ideias vs Oportunidades: Atratividade de Mercado, Prosposta de valor e BMC, Plano de negócios</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Pilares do Empreendedorismo, Ideias e Oportunidades, Ideias vs Oportunidades: Atratividade de Mercado, Prosposta de valor e BMC, Plano de negócios.</p>
                     <p class="apresentacao_conteudo_texto">🎉Aprendi sobre empreender, mindset empreendedor, construção de modelo de negócios, criação de plano de negócios, validação de ideias e avaliação de mercado. Sinto que evolui muito nos meus estudos e estou ansioso para aplicar todo esse conhecimento na prática! 💼🚀</p>
                     
                 </div>
@@ -94,7 +95,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Propósito profissional_ seja protagonista da sua carreira</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: O que é propósito, Realização e felicidade, Valores e propósito, Definindo prioridades,  Vivendo com propósito</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: O que é propósito, Realização e felicidade, Valores e propósito, Definindo prioridades,  Vivendo com propósito.</p>
                     <p class="apresentacao_conteudo_texto">🎉Aprendi a conhecer minha razão de ser e como o ikigai pode me ajudar a alinhar meus talentos, vocação e carreira. Compreendi a importância do propósito para o meu sucesso e descobri que meus valores estão diretamente ligados a ele. Refleti sobre o que é sucesso para mim e manterei sempre meu propósito em vista e direcionando-o ao longo do tempo.</p>
                 </div>
             </div>
@@ -105,8 +106,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Desenvolvimento de carreira_ a demanda do mercado</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: O que é carreira?, Medindo o desempenho, Motivação pessoal x Profissional, Valores, O que o mercado espera de mim.
-                    O que o mercado espera de mim? #2</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: O que é carreira?, Medindo o desempenho, Motivação pessoal x Profissional, Valores, O que o mercado espera de mim.</p>
                     <p class="apresentacao_conteudo_texto">🎉 Aprendi a direcionar minha carreira, identificar meus valores e motivações, além de conhecer as competências mais buscadas pelo mercado. Compreendi a importância da motivação tanto na vida profissional quanto pessoal. 🚀</p>
                 </div>
             </div>
@@ -117,7 +117,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Lógica de Programação com Javascript</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Iniciando com JavaScript, Condicionais e concatenação, Loops e tentativas, Boas práticas de programação, Desafio</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Iniciando com JavaScript, Condicionais e concatenação, Loops e tentativas, Boas práticas de programação, Desafio.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉É o começo de uma grande Jornada no mundo da programação, onde foi possível aprender a importância da Lógica de programação para a carreira de desenvolvedor de software. Neste curso aprendi conceitos importantes como variáveis, loops, condicionais (if e else), assim como boas práticas de programação.🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -129,7 +129,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Git e GitHub: Compartilhando e Colaborando em Projetos</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Compartilhando projetos, Colaborando em projetos, Utilizando Git na IDE, Voltando no tempo e mais recursos</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Compartilhando projetos, Colaborando em projetos, Utilizando Git na IDE, Voltando no tempo e mais recursos.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a criar meu portfólio de projetos no GitHub, compartilhar o código dos meus projetos, colaborar em projetos, fazer versionamento de software com o Git, lidar com conflitos em códigos e até mesmo analisar e modificar o histórico de commits de um repositório Git. 🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -152,7 +152,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Lógica de Programação: Explore Funções e Listas</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Interagindo com HTML, Funções, Reiniciando o jogo, Listas, Publicando o projeto</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Interagindo com HTML, Funções, Reiniciando o jogo, Listas, Publicando o projeto.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉Aprendi sobre funções, manipulação de elementos na tela com JavaScript, Github, Vercel, listas e muito mais. Me sinto mais preparado(a) para encarar desafios na programação e evoluir cada vez mais!🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -163,8 +163,8 @@
             <img class="apresentacao_imagem" src="/cursos/ONE/imgOne/curso6.1.png" alt="Logo-ONE">
             <div class="apresentacao_conteudo_secao">    
                 <div>
-                    <h2 class="apresentacao_conteudo_titulo">HTML e CSS_ ambientes de desenvolvimento, estrutura de arquivos e tags</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Editor de código VSCode, Documentação e HTML, Layout e tags semânticas, Estilizando o projeto com CSS, Super estilizando o seu CSS</p>
+                    <h2 class="apresentacao_conteudo_titulo">HTML e CSS_ ambientes de desenvolvimento, estrutura de arquivos e tags.</h2>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Editor de código VSCode, Documentação e HTML, Layout e tags semânticas, Estilizando o projeto com CSS, Super estilizando o seu CSS.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a criar um ambiente de desenvolvimento, estudar documentações, criar projetos do zero, estilizar com CSS e aplicar boas práticas de HTML semântico. Estou evoluindo cada vez mais nos estudos! 🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -176,7 +176,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">HTML e CSS_ Classes, posicionamento e Flexbox</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Seletores e posicionamento, Posicionando mais elementos, Estilos de texto e fontes, Manipulando botões, Ajustando o espaçamento</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Seletores e posicionamento, Posicionando mais elementos, Estilos de texto e fontes, Manipulando botões, Ajustando o espaçamento.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi tanto sobre classes CSS e sua importância, como também técnicas incríveis para posicionar elementos de forma prática com o Flexbox. Além disso, agora sei como estilizar textos, fontes e ícones, posicionar elementos em uma página com CSS e aplicar efeitos de estilização incríveis! Estou muito orgulhoso da minha evolução nos estudos e mal posso esperar para aplicar todo esse conhecimento em projetos futuros.🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -189,7 +189,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">HTML e CSS_ cabeçalho, footer e variáveis CSS</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Preparando o layout do projeto, Criando ícones clicáveis, Criando header e footer, Navegando entre páginas e aplicando variáveis CSS</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Preparando o layout do projeto, Criando ícones clicáveis, Criando header e footer, Navegando entre páginas e aplicando variáveis CSS.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a entender o dia a dia de um desenvolvedor Front-end, criar um código seguindo boas práticas, utilizar variáveis CSS para manter meu código limpo, trabalhar com múltiplas páginas HTML e conhecer as pseudo classes. 🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -201,7 +201,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">HTML e CSS_ trabalhando com responsividade e publicação de projetos</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Unidade de medidas, Adaptando elementos, Responsividade, Responsividade e GitHub, Repositório do GitHub</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Unidade de medidas, Adaptando elementos, Responsividade, Responsividade e GitHub, Repositório do GitHub.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a tornar meu site responsivo, utilizar Media Query, armazenar código no GitHub, diferenciar medidas absolutas e relativas, e publicar meu projeto na web. Estou evoluindo cada vez mais nos meus estudos! 💪🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
@@ -213,7 +213,7 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Praticando lógica de programação_ Challenge Decodificador de Texto</h2>
-                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Construa seu Decodificador de Texto</p>
+                    <p class="apresentacao_conteudo_topicos">Tópicos Abordados: Construa seu Decodificador de Texto.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Etapa final da fase 2 do programa ONE concluído com sucesso 💪. Desenvolver um decodificador de texto 💪🚀</p>
                     <p class="link_one">Você confere o projeto desenvolvido clicando
                         <a class="link_one_cliqueaqui" href="https://desafiodecodificadortexto.vercel.app/">aqui</a>
@@ -268,7 +268,20 @@
                     <h2 class="apresentacao_conteudo_titulo">Java: consumindo API, gravando arquivos e lidando com erros</h2>
                     <p class="apresentacao_conteudo_topicos"> Pontos abordados:Requisições e respostas, Utilizando uma biblioteca externa, Lidando com exceções e Persistindo dados em arquivos e Consolidando conhecimentos.</p>
                     <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a consumir uma API HTTP em Java, converter informações em objetos Java, manipular dados em JSON e utilizar a biblioteca Gson. Além disso, agora sei como lidar com arquivos usando as classes do pacote java.io.  🚀</p>
-                    <p class="link_one"> Você confere o link do desafio proposto nesse curso <a class="link_one_cliqueaqui" href="https://github.com/Gersonpc10/ListaCompraCartaoDeCredito.git"> aqui</a></p>
+                    <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
+                </div>
+            </div>
+        </section>
+
+        
+        <section class="apresentacao_conteudo">
+            <img class="apresentacao_imagem" src="/cursos/ONE/imgOne/curso13.png" alt="Logo-ONE">
+            <div class="apresentacao_conteudo_secao">    
+                <div>
+                    <h2 class="apresentacao_conteudo_titulo">Desafio Challenge Back End ONE: Desenvolver um Conversor de Moedas.</h2>
+                    <p class="apresentacao_conteudo_topicos"> Pontos abordados:Requisições e respostas, Utilizando uma biblioteca externa, Lidando com exceções e Persistindo dados em arquivos e Consolidando conhecimentos.</p>
+                    <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a consumir uma API HTTP em Java, converter informações em objetos Java, manipular dados em JSON e utilizar a biblioteca Gson. Além disso, agora sei como lidar com arquivos usando as classes do pacote java.io.  🚀</p>
+                    <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
             </div>
         </section>
@@ -279,8 +292,9 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Próxima etapa do programa</h2>
-                    <p class="apresentacao_conteudo_texto"> Desafio Challenge Back End ONE: Desenvolver um Conversor de Moedas.</p>
-                    <p class="link_one"> Este projeto irá por em prática  conceitos importantes do JAVA adiquiridos nos cursos como consumo de API, Herança, Polimorfismo, entre outros.<strong class="link_one_cliqueaqui" > Status do Projeto: Em desenvolvimento</strong></p>
+                    <p class="apresentacao_conteudo_texto"> Java: Trabalhando com Lambdas, Streams e Spring Framework.</p>
+                    <p class="link_one"> O foco desse curso será criar um projeto com Spring Boot, utilizando recursos como lambdas, streams e Maven para gerenciar dependências. utilizando conceitos importantes do Java, como interfaces, generics e API de datas, aplicandor tudo isso na prática com uma aplicação de streaming de filmes e séries.</p>
+                    <p><strong class="link_one_cliqueaqui" > Status do Projeto: Em desenvolvimento</strong></p>
                 </div>
             </div>
         </section>
