--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,7 +33,7 @@
                     <h2>Habilidades Técnicas</h2>
                     <p class="apresentacao_conteudo_p">* Linguagem de Programação: Java e JavaScript</p>
                     <p class="apresentacao_conteudo_p">* Ferramentas: GitHub</p>
-                    <p class="apresentacao_conteudo_p">* Metodologias: Agile, Scrum</p>
+                    <p class="apresentacao_conteudo_p">* Metodologias: Scrum</p>
                     
                     <h2>Habilidades Interpessoais</h2>
                     <p class="apresentacao_conteudo_p">* Trabalho em Equipe</p>
