--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <title>Cursos</title>
     <link rel="stylesheet" href="stylecursos.css">
 </head>
 <body>
