--- a/cursos/ONE/one.html
+++ b/cursos/ONE/one.html
@@ -279,13 +279,12 @@
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Desafio Challenge Back End ONE: Desenvolver um Conversor de Moedas.</h2>
-                    <p class="apresentacao_conteudo_topicos"> Pontos abordados:Requisições e respostas, Utilizando uma biblioteca externa, Lidando com exceções e Persistindo dados em arquivos e Consolidando conhecimentos.</p>
-                    <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a consumir uma API HTTP em Java, converter informações em objetos Java, manipular dados em JSON e utilizar a biblioteca Gson. Além disso, agora sei como lidar com arquivos usando as classes do pacote java.io.  🚀</p>
+                    <p class="apresentacao_conteudo_topicos"> Desenvolvido uma aplicação em java para converter valores em diversas moedas utilziando API ExchangeRate. Colocando em prática os conceitos adqiridos em java orientação a objetos.</p>
+                    <p class="apresentacao_conteudo_texto"> 🎉 Aprendi a consumir uma API HTTP em Java, converter informações em objetos Java, manipular dados em JSON e utilizar a biblioteca Gson. 🚀</p>
                     <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
                 </div>
             </div>
         </section>
-
         
         <section class="apresentacao_conteudo">
             
