--- a/cursos/DADOS/dados.html
+++ b/cursos/DADOS/dados.html
@@ -32,7 +32,7 @@
                     <p class="apresentacao_conteudo_texto">* Relações no Power BI.</p>
                     <p class="apresentacao_conteudo_texto">* DAX (Data Analytics Expressions).</p>
                     <p class="apresentacao_conteudo_texto">* Medidas.</p>
-                    <p class="apresentacao_conteudo_texto">* Criação de Grá cos e Objetos no Power BI.</p>
+                    <p class="apresentacao_conteudo_texto">* Criação de Gráficos e Objetos no Power BI.</p>
                     <p class="apresentacao_conteudo_texto">* Dashboards Impressionantes.</p>
                     <p class="apresentacao_conteudo_texto">* Power BI Service.</p>
                     
@@ -50,7 +50,7 @@
                     <p class="apresentacao_conteudo_texto">* Realizando cálculos.</p>
                     <p class="apresentacao_conteudo_texto">* Análises com os gráficos.</p>
                     <p class="apresentacao_conteudo_texto">* Estilização do relatório.</p>
-                    <p class="apresentacao_conteudo_texto">* Power Bi Service.</p>
+                    <p class="apresentacao_conteudo_texto">* Power BI Service.</p>
                     
                 </div>
             </div>
