--- a/cursos/ONE/one.html
+++ b/cursos/ONE/one.html
@@ -286,14 +286,27 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="apresentacao_conteudo">
+            <img class="apresentacao_imagem" src="/cursos/ONE/imgOne/curso14.png" alt="Logo-ONE">
+            <div class="apresentacao_conteudo_secao">    
+                <div>
+                    <h2 class="apresentacao_conteudo_titulo">Java: Trabalhando com Lambdas, Streams e Spring Framework..</h2>
+                    <p class="apresentacao_conteudo_topicos"> Pontos abordados: Um novo projeto utilizando o Spring Framework, Modelando os dados da aplicação, Manipulando com fluxos as coleções de dados, Explorando mais os fluxos e gerando estatísticas e Consolidando conhecimentos.</p>
+                    <p class="apresentacao_conteudo_texto"> 🎉 aprendi a utilizar o Spring Framework em projetos com linha de comando, a trabalhar colaborativamente com Git e GitHub, e a realizar a desserialização de dados com a biblioteca Jackson. Além disso, pude aplicar boas práticas de desenvolvimento com funções lambdas, manipular fluxo de dados com Streams e implementar estatísticas personalizadas.🚀</p>
+                    <p class="link_one"> Em breve estarei disponibilizando o link do projeto desenvolvido <strong class="link_one_cliqueaqui" > aqui</strong></p>
+                </div>
+            </div>
+        </section>
         
         <section class="apresentacao_conteudo">
             
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Próxima etapa do programa</h2>
-                    <p class="apresentacao_conteudo_texto"> Java: Trabalhando com Lambdas, Streams e Spring Framework.</p>
-                    <p class="link_one"> O foco desse curso será criar um projeto com Spring Boot, utilizando recursos como lambdas, streams e Maven para gerenciar dependências. utilizando conceitos importantes do Java, como interfaces, generics e API de datas, aplicandor tudo isso na prática com uma aplicação de streaming de filmes e séries.</p>
+                    <p class="apresentacao_conteudo_texto"> Java: Persistência de dados e consultas com Spring Data JPA.</p>
+                    <p class="link_one"> O foco desse curso será: Aprender a utilizar os repositórios do Spring Data JPA, entender como mapear classes para o banco de dados com ORM,  modelar corretamente os relacionamentos entre entidades, conhecer as diversas formas consultar o banco em uma aplicação Java, utilize variáveis de ambiente para deixar seu código mais seguro e integrar uma aplicação com a API do ChatGPT.</p>
                     <p><strong class="link_one_cliqueaqui" > Status do Projeto: Em desenvolvimento</strong></p>
                 </div>
             </div>
