Inclusão de curso

--- a/cursos/ONE/one.html
+++ b/cursos/ONE/one.html
@@ -302,7 +302,7 @@
         
         
         <section class="apresentacao_conteudo">
-            <img class="apresentacao_imagem" src="/cursos/ONE/imgOne/curso15.png" alt="Logo-ONE">
+            <img class="apresentacao_imagem" src="/cursos/ONE/imgOne/curso15.png" alt="criando sua primeira API">
             <div class="apresentacao_conteudo_secao">    
                 <div>
                     <h2 class="apresentacao_conteudo_titulo">Java_ criando sua primeira API e conectando ao front</h2>
