--- a/cursos/ONE/one.html
+++ b/cursos/ONE/one.html
@@ -330,7 +330,7 @@
                     <h2 class="apresentacao_conteudo_titulo">Próxima etapa do programa</h2>
                     <p class="apresentacao_conteudo_texto"> Spring Boot 3: aplique boas práticas e proteja uma API Rest</p>
                     <p class="link_one"> O foco desse curso será: Padronizar os retornos dos controllers da API, utilizar os códigos HTTP corretamente, adicionar o módulo Spring Security no projeto, implementar um mecanismo de autenticação na API, realizar o controle de acesso na API e utilizar Json Web Token para controlar o acesso na API.</p>
-                    <p><strong class="link_one_cliqueaqui" > Status do Projeto: Em desenvolvimento</strong></p>
+                    <p><strong class="link_one_cliqueaqui" > Status do Projeto: Em desenvolvimento.</strong></p>
                 </div>
             </div>
         </section>
